# agent-inbox

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: README.md
examples/briefs/: architect.md  failure-analyst.md  implementer.md  operator.md  ops.md  reviewer.md  tester.md
src/agent_inbox/: __init__.py  __main__.py  briefs.py  cli.py  core.py  db.py  server.py
tests/: test_approval_gate.py  test_brief_tool.py  test_briefs.py  test_broadcast.py  test_cli.py  test_concurrency.py  test_db.py  test_patton_findings.py  test_patton_round2.py  test_patton_v035.py  test_pending.py  test_reply.py  test_server.py  test_validation.py  test_wait.py
ui/: .gitignore  .golangci.yml  README.md  app.go  app_test.go  briefs.go  go.mod  go.sum  main.go  paths.go  store.go  wails.json
ui/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
ui/frontend/src/: App.svelte  app.css
ui/frontend/src/lib/: AgentSidebar.svelte  ComposeModal.svelte  MessageDetail.svelte  MessageList.svelte  types.ts
ui/frontend/wailsjs/go/: models.ts
ui/frontend/wailsjs/go/main/: App.d.ts  App.js
