[project]
name = "agent-inbox-mcp"
version = "0.3.3"
description = "MCP server for a multi-agent message inbox — SQLite-backed, brief-driven, vendor-neutral"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Greg Beam, KI7MT", email = "ki7mt@yahoo.com"}]
requires-python = ">=3.10"
keywords = ["mcp", "agent", "inbox", "messaging", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/KI7MT/agent-inbox"
Issues = "https://github.com/KI7MT/agent-inbox/issues"

[project.scripts]
agent-inbox-mcp = "agent_inbox.server:main"
agent-inbox = "agent_inbox.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_inbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
